Solving dual-approach logic for Interlockingimpl.java  autograder tests